Added Web Scrapping Precautions and Tips

--- a/Steam_scrapper_Tutorial.ipynb
+++ b/Steam_scrapper_Tutorial.ipynb
@@ -2125,8 +2125,25 @@
     ">- References \n",
     "- https://github.community/t/how-to-setup-github-actions-to-run-my-python-script-on-schedule/18335/2\n",
     "- https://medium.datadriveninvestor.com/accessing-github-secrets-in-python-d3e758d8089b\n",
-    "- https://pandas.pydata.org/docs/reference/frame.html#"
+    "- https://pandas.pydata.org/docs/reference/frame.html#\n",
+    "\n",
+    "\n",
+    ">- Here are some things to keep in mind w.r.t. web scraping:\n",
+    "\n",
+    "- Most websites disallow web scraping for commercial purposes\n",
+    "- Prefer using web scraping only for learning and research purposes\n",
+    "- Some websites may block your IP or stop sending valid information if you send too many requests\n",
+    "- Review the terms and conditions of a website before scraping data from it\n",
+    "- Remove sensitive and personally identifiable information before publishing a dataset online\n",
+    "- Use official REST APIs wherever available, with proper API keys\n",
+    "- Scraping data that you see after logging in is harder (it requires special cookies and headers)\n",
+    "- Websites change their HTML layout frequently, which may cause your scarping scripts to break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
