--- a/Steam_scrapper_Tutorial.ipynb
+++ b/Steam_scrapper_Tutorial.ipynb
@@ -2097,7 +2097,9 @@
    "source": [
     "- After doing this go to action click action_name then click on `Run Workflow` to trigger the workflow manually\n",
     "- On successfull/unsuccesful build, see logs to debug any issue you may face \n",
-    "- The workflow will automatically run on scheduled time which is very cool, you can check the logs after workflow has been executed."
+    "- The workflow will automatically run on scheduled time which is very cool, you can check the logs after workflow has been executed.\n",
+    "\n",
+    "Refer : https://docs.github.com/en/actions/quickstart"
    ]
   },
   {
