--- a/Steam_scrapper_Tutorial.ipynb
+++ b/Steam_scrapper_Tutorial.ipynb
@@ -2099,7 +2099,9 @@
     "- On successfull/unsuccesful build, see logs to debug any issue you may face \n",
     "- The workflow will automatically run on scheduled time which is very cool, you can check the logs after workflow has been executed.\n",
     "\n",
-    "Refer : https://docs.github.com/en/actions/quickstart"
+    "Refer :\n",
+    "- https://docs.github.com/en/actions/quickstart\n",
+    "- https://lab.github.com/githubtraining/github-actions:-hello-world"
    ]
   },
   {
