Updated ipynb file

--- a/Steam_scrapper_Tutorial.ipynb
+++ b/Steam_scrapper_Tutorial.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Steam Webscrapper\n",
+    "## Steam Webscraper\n",
     "![img](https://sm.pcmag.com/t/pcmag_in/how-to/2/21-steam-t/21-steam-tips-for-pc-gaming-noobs-and-power-users_khuz.1920.jpg)\n",
     "\n",
     "> In this project I will be showing:\n",
-    ">- Scrapping Top 100 Topsellers from [steam](https://store.steampowered.com/)\n",
+    ">- Scraping Top 100 Topsellers from [steam](https://store.steampowered.com/)\n",
     ">- Automating the web browser to load a steam's dynamic website using Selenium\n",
     ">- Using requests, BeautifulSoup libraries to scrape the website \n",
     ">- Saving the scraped data to a csv file and loading it back in a dataframe using pandas\n",
     ">- Sending the csv file to email using Python\n",
-    ">- Setting up a github action to automate daily web scrapping and sending csv file to email on a specified schedule\n",
+    ">- Setting up a github action to automate daily web scraping and sending csv file to email on a specified schedule\n",
     ">- We will also do web crawling using requests"
    ]
   },
@@ -2002,11 +2002,11 @@
    "source": [
     ">### Setting up a github action\n",
     ">\n",
-    "- Once all the methods are done creating, put them in separate 'file.py' like I did in 'scrapper.py' \n",
+    "- Once all the methods are done creating, put them in separate 'file.py' like I did in 'scraper.py' \n",
     "- We are good to push the code to github\n",
     "\n",
     "> Follow these commands to push the code to github\n",
-    "- Create a empty repository on github with name of your choice say 'scrapper'\n",
+    "- Create a empty repository on github with name of your choice say 'scraper'\n",
     "- Make sure git is setup on your device (https://www.atlassian.com/git/tutorials/install-git)\n",
     "- Then initialize an empty repo locally using your terminal/cmd prompt\n"
    ]
@@ -2111,13 +2111,13 @@
     "## Wrapping Up!\n",
     ">- Learned soo much while doing project, quick summary of work we did\n",
     "- Used selenium to run the browser to open the steam website\n",
-    "- Navigated to topsellers page, scrapped game titles for info like name,price,date of game title using beautiful soup\n",
-    "- Using requests to get page for each tiltle then scrapped info like review,rating,description,tags,publisher,developer of game\n",
+    "- Navigated to topsellers page, scraped game titles for info like name,price,date of game title using beautiful soup\n",
+    "- Using requests to get page for each tiltle then scraped info like review,rating,description,tags,publisher,developer of game\n",
     "- Saved all of this data to a csv file \n",
     "- Loading it back using pandas\n",
     "- Sent the csv file using SMTP\n",
     "- Added version control using git\n",
-    "- Made a github action to automate whole workflow from opening browser, scrapper info, saving csv then sending it to email on scheduled time\n",
+    "- Made a github action to automate whole workflow from opening browser, scraper info, saving csv then sending it to email on scheduled time\n",
     "\n",
     "\n",
     ">- Future work\n",
