--- a/Steam_scrapper_Tutorial.ipynb
+++ b/Steam_scrapper_Tutorial.ipynb
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,8 @@
      "output_type": "stream",
      "text": [
       "Sending email..\n",
-      "Sending Email Failed!\n"
+      "Sending Email Failed!\n",
+      "'list' object has no attribute 'encode'\n"
      ]
     }
    ],
