--- a/Steam_scrapper_Tutorial.ipynb
+++ b/Steam_scrapper_Tutorial.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,9 +2152,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "eeb6ac1fa1a58f6468e1234f6ac82feb03bcf002b71f2c79b28e262021cb883d"
-  },
   "kernelspec": {
    "display_name": "Python 3.10.0 ('ds')",
    "language": "python",
@@ -2172,7 +2169,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5b76d791cd910d37f18e6a1b5beae78fb71472396c55a0914b74e56c15f53678"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
